samples/_failures_safe/1761419883_45c4c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b028e995.c: In function ‘main’:
./samples/SAFE/__tmp_b028e995.c:149:30: error: expected ‘;’ at end of input
  149 |         cleanup_text_analysis
      |                              ^
      |                              ;
./samples/SAFE/__tmp_b028e995.c:149:9: error: expected declaration or statement at end of input
  149 |         cleanup_text_analysis
      |         ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b028e995.c:149:9: error: expected declaration or statement at end of input
